fgdiag (0.2.45) UNRELEASED; urgency=low

  [ Ryan Niebur ]
  * Work In Progress: Timeout (#27911)

  [ Vagrant Cascadian ]
  * disktest: ide_disk is no longer needed on powerpc. 

 -- Vagrant Cascadian <vagrant@debian.org>  Sun, 15 Apr 2012 13:05:17 -0700

fgdiag (0.2.44) freegeek-test; urgency=low

  * remove unneeded console-tools dependency?
  * add storage size and unique id information to disktest summary
    output

 -- Ryan Niebur <ryan@debian.org>  Sat, 14 Apr 2012 15:16:55 -0700

fgdiag (0.2.43) freegeek-test; urgency=low

  * improve lshw parsing in the video-detect script

 -- Ryan Niebur <ryan@debian.org>  Sat, 07 Apr 2012 17:49:25 -0700

fgdiag (0.2.42) freegeek-test; urgency=low

  * Format the elapsed seconds into HH:MM:SS format (Closes: #26281)
  * if an error is caught while saving the final result to the database,
    then retry until it works (Closes: #23062)

 -- Ryan Niebur <ryan@debian.org>  Sat, 14 Jan 2012 14:11:02 -0800

fgdiag (0.2.41) freegeek-test; urgency=low

  * save the number of megabytes for the drives to the disktest_runs
    table in fgdb.rb

 -- Ryan Niebur <ryan@debian.org>  Wed, 07 Dec 2011 16:09:12 -0800

fgdiag (0.2.40) freegeek-test; urgency=low

  [ Vagrant Cascadian ]
  * remove fgdiag-open4 package, as all current versions of debian include
    libopen4-ruby1.8. 

  [ Ryan Niebur ]
  * log to the fgdb.rb install at $DISKTEST_LOGTO_FGDB if its set

  [ Vagrant Cascadian ]
  * lower dependency on xresprobe to a recommends, as xresprobe was removed 
    from squeeze.

 -- Vagrant Cascadian <vagrant@debian.org>  Sat, 26 Mar 2011 18:41:55 -0700

fgdiag (0.2.39) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * make mem_debug default
  * remove lspci
  
  [ Vagrant Cascadian ]
  * disktest:
    - when DISKTEST_REQUIRED_NUMBER_OF_DRIVES variable is set, convert to an
      integer before using.
    - initiate a smart self-test before testing the drives. (Closes: #21275)
