@@ -1,0 +1,16 @@
+#!/bin/sh -e
+
+cat - <<EOF
+  <node id="disk:0" claimed="true" class="disk" handle="SCSI:02:00:00:00">
+   <description>ATA Disk</description>
+   <product>WDC WD800ZZ-00ZZ</product>
+   <vendor>Western Digital</vendor>
+   <physid>0</physid>
+   <businfo>scsi@2:0.0.0</businfo>
+   <logicalname>/dev/xvdb1</logicalname>
+   <dev>8:0</dev>
+   <version>06.0</version>
+   <serial>WD-ABCD00000000</serial>
+   <size units="bytes">80032038912</size>
+  </node>
+EOF
